fix spacing on mobile devices

--- a/public_v2/style/introduction.css
+++ b/public_v2/style/introduction.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vh;
     margin-bottom: calc(var(--base-padding)*2);
     box-sizing: border-box;
 }
@@ -12,7 +11,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 20px;
     border-radius: 10px; /* Optional: Add border radius */
 }
 
